# SENTINEL_CI

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  SECURITY.md  THREAT_MODEL.md  VERCEL_DEPLOYMENT.md  action.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  sentinel-ci-srs.docx  sentinel-ci-srs.md  vercel.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy.yml  sentinel-ci.yml
.semgrep/: no-string-sql.yaml  no-weak-crypto.yaml
.sentinel/policies/: no_new_critical.rego  require_sbom.rego
action/: aggregate.py  post_annotations.py
action/steps/: run_checkov.sh  run_gitleaks.sh  run_opa.sh  run_semgrep.sh  run_trivy.sh  run_zap.sh
api/: __init__.py  config.py  main.py
api/db/: __init__.py  supabase.py
api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py  security.py
api/models/: __init__.py  schemas.py
api/routes/: __init__.py  alerts.py  keys.py  reports.py  repositories.py  scans.py  webhooks.py
api/services/: __init__.py  defectdojo.py  report_generator.py  scanner_normalizer.py  webhook_delivery.py
api/utils/: __init__.py  crypto.py  validators.py
dashboard/: astro.config.mjs  package-lock.json  package.json  vercel.json
dashboard/src/: env.d.ts  middleware.ts
dashboard/src/components/: StaticFindingBadge.astro  StaticRepoCard.astro
dashboard/src/components/islands/: ApiKeyManager.tsx  FindingsTable.tsx  SeverityChart.tsx  TrendChart.tsx
dashboard/src/layouts/: BaseLayout.astro
dashboard/src/lib/: api.ts  auth.ts
dashboard/src/pages/: index.astro  login.astro  settings.astro
dashboard/src/pages/auth/: callback.astro
dashboard/src/pages/repos/: [id].astro
dashboard/src/pages/scans/: [id].astro
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SETUP.md
scripts/: pre-deploy-check.sh
sentinel_ci.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
supabase/: seed.sql
supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_indexes.sql  004_vault_setup.sql
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/action/: test_aggregate_contract.sh  test_scripts_exist.sh
tests/api/: __init__.py  conftest.py  test_api_key_hashing.py  test_auth_rate_limit.py  test_cross_user_access.py  test_error_sanitization.py  test_jwt_claims.py  test_ssrf_prevention.py  test_webhook_hmac.py
